# stats-scrape

./: .gitignore  README.md  pyproject.toml
.github/workflows/: schedule-data-refresh.yaml
statsscrape/: createplayerid.py  statsscrape.py
